fixed text spacing

--- a/styles.css
+++ b/styles.css
@@ -199,7 +199,7 @@ form {
 }
 
 .blog-text-box{
-  height: 100px;
+  height: 10%;
   color: white;
   margin-left: 10px;
 }
@@ -210,7 +210,7 @@ form {
 }
 
 .blog-title{
-  font-size: 26px;
+  font-size: 27px;
   margin: 0px;
 }
 
